Add content, structure  and basic styling

--- a/index.html
+++ b/index.html
@@ -9,26 +9,32 @@
 
   <title>Dario Melia | Stats card challenge</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+<div class="card">
+  <div class="left-half">
+    <div class="text-container">
+      <h4 class="title">Get <span class="accent">insights</span> that help your business grow.</h4>
+      <p class="text">
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer
+        experience, and overall efficiency.
+      </p>
+    </div>
+    <div class="stats">
+      <p>10k+</p><p>314</p><p>12m+</p>
+      <p class="stats-heading">companies</p><p class="stats-heading">templates</p><p class="stats-heading">queries</p>
 
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    </div>
   </div>
+  <div class="right-half">
+    <img src="images/image-header-desktop.jpg" alt="people at meeting">
+
+  </div>
+
+
+</div>
+
+
 </body>
+
 </html>
