Add style-guide.md, add styles in headings and text, size and set image properly, fixed margin problems in stats

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
 
+ <!-- FONTS -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+
+
   <title>Dario Melia | Stats card challenge</title>
 
 </head>
@@ -21,13 +27,16 @@
       </p>
     </div>
     <div class="stats">
-      <p>10k+</p><p>314</p><p>12m+</p>
-      <p class="stats-heading">companies</p><p class="stats-heading">templates</p><p class="stats-heading">queries</p>
-
+      <div class="stats-numbers">
+        <p>10k+</p><p>314</p><p>12m+</p>
+      </div>
+      <div class="stats-headings">
+        <p>COMPANIES</p><p>TEMPLATES</p><p>QUERIS</p>
+      </div>
     </div>
   </div>
   <div class="right-half">
-    <img src="images/image-header-desktop.jpg" alt="people at meeting">
+    <img class="image" src="images/image-header-desktop.jpg" alt="people at meeting">
 
   </div>
 
