Add color filter to image, style borders, center text, position everything, adjust margins

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="stats">
       <div class="stats-numbers">
-        <p>10k+</p><p>314</p><p>12m+</p>
+        <p>10k+</p><p>314</p><p>12M+</p>
       </div>
       <div class="stats-headings">
         <p>COMPANIES</p><p>TEMPLATES</p><p>QUERIS</p>
@@ -36,6 +36,7 @@
     </div>
   </div>
   <div class="right-half">
+    <div class="img-filter"></div>
     <img class="image" src="images/image-header-desktop.jpg" alt="people at meeting">
 
   </div>
