--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -7,42 +8,47 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
 
- <!-- FONTS -->
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+  <!-- FONTS -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 
 
   <title>Dario Melia | Stats card challenge</title>
 
 </head>
+
 <body>
-<div class="card">
-  <div class="left-half">
-    <div class="text-container">
-      <h4 class="title">Get <span class="accent">insights</span> that help your business grow.</h4>
-      <p class="text">
-        Discover the benefits of data analytics and make better decisions regarding revenue, customer
-        experience, and overall efficiency.
-      </p>
-    </div>
-    <div class="stats">
-      <div class="stats-numbers">
-        <p>10k+</p><p>314</p><p>12M+</p>
+  <div class="card">
+    <div class="left-half">
+      <div class="text-container">
+        <h4 class="title">Get <span class="accent">insights</span> that help your business grow.</h4>
+        <p class="text">
+          Discover the benefits of data analytics and make better decisions regarding revenue, customer
+          experience, and overall efficiency.
+        </p>
       </div>
-      <div class="stats-headings">
-        <p>COMPANIES</p><p>TEMPLATES</p><p>QUERIS</p>
+      <div class="stats">
+        <div class="stats-numbers">
+          <p>10k+</p>
+          <p>314</p>
+          <p>12M+</p>
+        </div>
+        <div class="stats-headings">
+          <p>COMPANIES</p>
+          <p>TEMPLATES</p>
+          <p>QUERIS</p>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="right-half">
-    <div class="img-filter"></div>
-    <img class="image" src="images/image-header-desktop.jpg" alt="people at meeting">
+    <div class="right-half">
+      <div class="img-filter"></div>
+      <img class="image" src="images/image-header-desktop.jpg" alt="people at meeting">
+
+    </div>
+
 
   </div>
-
-
-</div>
 
 
 </body>
